# gcta

./: CMakeLists.txt
docs/manual/: README.md
docs/manual/gcta2_doc/md/: 01overview.md  02download.md  06gwas_analysis.md  11Data_resource.md
docs/manual/gcta2_doc/word/Jun1/: GCTA website Download jy 1June2021.docx  GCTA website Overview jy 1June2021.docx  GCTA website fastGWA-BB jy 2June2021.docx
docs/manual/gcta2_doc/word/Jun2/: GCTA website Overview jy 2June2021.docx
docs/manual/gcta2_doc/word/May14/: Data Resource May14 jy.docx  Gene-based test for rare variants May14 jy.docx  fastGWA-BB webpage.docx  fastGWA-GLMM May14 jy.docx
docs/manual/gcta2_doc/word/May14_old/: Data Resource May14.docx  Gene-based test for rare variants May14.docx  fastGWA-GLMM May14.docx
docs/manual/gcta2_doc/word/May27/: ACAT-V web jy 27May2021.docx  GCTA website Overview jy 27Mar2021.docx  fastGWA web jy 27May2021.docx  fastGWA-GLMM web jy 27May2021.docx
docs/manual/source/: Basic_Options.rst  Download.rst  FAQ.rst  GREML.rst  Overview.rst  conf.py  index.rst
src/: Geno.cpp  Matrix.hpp  config.h  main.cpp  utils.cpp
submods/Pgenlib/: CMakeLists.txt
